--- a/AtroposGame/Resources/layout/WiFi_device_detail.xml
+++ b/AtroposGame/Resources/layout/WiFi_device_detail.xml
@@ -27,7 +27,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/disconnect_peer_button" />
             <Button
-                android:id="@+id/btn_start_client"
+                android:id="@+id/btn_test"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/get_file_button"
