--- a/AtroposGame/Resources/layout/MachineLearning.axml
+++ b/AtroposGame/Resources/layout/MachineLearning.axml
@@ -70,14 +70,12 @@
             android:text="Generate Classification AI"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:enabled="false"
-            android:layout_margin="10dp" />
+            android:enabled="false" />
         <Button
-            android:id="@+id/mlrn_run_test_btn"
-            android:text="Run Debugging Test"
+            android:id="@+id/mlrn_study_gc_btn"
+            android:text="Generate Cue AI for Selected"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp" />
+            android:layout_height="wrap_content" />
     <!--<fragment
         class="Atropos.Machine_Learning.GestureListFragment"
         android:id="@+id/mlrn_gestureclass_list_fragment"
